--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
 		</div>
 		<!-- /Scroll To Top Button -->
 
-		<div class="page-scroll mt-lg-4">
+		<div class="page-scroll">
 			<div id="page_container" class="bg-move-effect">
 				{% block navbar %}
 					{% include "front/includes/nav.html.twig" %}
