--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -28,7 +28,7 @@
                     <a href="{{ url('front_cguv') }}">Conditions générales de vente et d'utilisation</a>
                 </li>
                 <li>
-                    <a href="#Données personnelles" onclick="alert('En cours de rédaction')">Politiques de confidentialité</a>
+                    <a href="{{ url('front_pdc') }}">Politiques de confidentialité</a>
                 </li>
             </ul>
         </div>
