--- a/templates/front/projets/index.html.twig
+++ b/templates/front/projets/index.html.twig
@@ -23,11 +23,6 @@
 				<h1 class="pb-4"></h1>
 				<div class="page-title" id="devis">
 					<h1>Envie d'avoir une visibilité sur le web ? </h1>
-					<div class="page-subtitle">
-						<br>
-						<a href="{{ url('front_devis_new')}}">Cliquez ici pour personnaliser votre demande !</a>
-						<h4>Ou bien, choisissez parmi la sélection ci-dessous.</h4>
-					</div>
 				</div>
 
 				<div class="container">
@@ -41,7 +36,7 @@
 								<div class="card-body">
 									<h5 class="card-title">Rélisation de site d'agence</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site d'agence, afin de garantir une présence permanente en ligne..</p>
-									<a href="{{ url('front_devis_new', {'type': 'site_vitrine'}) }}" class="btn btn-primary">Je crée mon devis</a>
+									<a href="{{ url('front_devis_new', {'type': 'site_vitrine'}) }}" class="btn btn-primary">Plateforme web</a>
 								</div>
 							</div>
 						</div>
@@ -53,7 +48,7 @@
 								<div class="card-body">
 									<h5 class="card-title">Réalisation de site d'annonce immobilière</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site d'annonce immobilière ou de voyage, afin de garantir une présence permanente en ligne..</p>
-									<a href="{{ url('front_devis_new', {'type': 'site_real_estate'}) }}" class="btn btn-primary">Je crée mon devis</a>
+									<a href="{{ url('front_devis_new', {'type': 'site_real_estate'}) }}" class="btn btn-primary">Real estate</a>
 								</div>
 							</div>
 						</div>
@@ -65,7 +60,7 @@
 								<div class="card-body">
 									<h5 class="card-title">Rélisation de site eCommerce</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site de boutique en ligne..</p>
-									<a href="{{ url('front_devis_new', {'type': 'site_e-commerce'}) }}" class="btn btn-primary">Je crée mon devis</a>
+									<a href="{{ url('front_devis_new', {'type': 'site_e-commerce'}) }}" class="btn btn-primary">E-commerce</a>
 								</div>
 							</div>
 						</div>
@@ -77,7 +72,7 @@
 								<div class="card-body">
 									<h5 class="card-title">Réalisation de site portfolio</h5>
 									<p class="card-text">Une réalisation sur mesure pour votre site portfolio, afin de présenter vos meilleure créations et d'acquérir de nouveau client..</p>
-									<a href="{{ url('front_devis_new', {'type': 'site_portfolio'}) }}" class="btn btn-primary">Je crée mon devis</a>
+									<a href="{{ url('front_devis_new', {'type': 'site_portfolio'}) }}" class="btn btn-primary">Portfolio</a>
 								</div>
 							</div>
 						</div>
